apps/base/jenkins/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jenkins
  # namespace: jenkins
spec:
  hosts:
    - "jenkins.${cluster_subdomain}"
  gateways:
    - istio-ingress/wildcard-gateway
  http:
    - match: []
      route:
        - destination:
            host: jenkins
            port:
              number: 8080
